--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<header class="header">
-		@@include('blocks/tagline.html')
+		<!-- @@include('blocks/tagline.html') -->
 		@@include('blocks/nav.html')
 		@@include('blocks/mobile-nav.html')
 	</header>
