--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,7 +25,7 @@
 		@@include('blocks/bestseller.html')
 		@@include('blocks/promotion.html')
 		@@include('blocks/values.html')
-		<!-- @@include('blocks/newsletter.html') -->
+		@@include('blocks/newsletter.html')
 	</main>
 	<footer class="footer">
 		@@include('blocks/footer.html')
